see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

23-Jan-2010 Hannes Papenberg
^ Little performance improvement for JDocument::getTemplate()

22-Jan-2010 Hannes Papenberg
^ refactored search plugins to new plugin format
# Fixed XML manifest of profile plugin
- Removed JHTMLImage::system()
^ Deprecated JHTMLImage::site() and JHTMLImage::administrator()
^ Changed JHTML::image() to support relative paths to images
^ Changed all system images to be overrideable 
^ moved system images from /images /media/system and from components to /media/images folder

21-Jan-2010 Christophe Demko
^ Rename language loading in the extension folder

20-Jan-2010 Christophe Demko
# Correcting bugs in JForm
# Correcting bad display in module and plugin edit
^ Give priority to language file located in joomla folder versus those located in extension folder

20-Jan-2010 Jean-Marie Simonet
+ Added xx-XX administrator language for testing purposes. Included an xx-XX.override.ini and a custom transliteration.php.
^ Modified language.php to look first for site then admin language folders for the custom transliterate function

19-Jan-2010 Hannes Papenberg
# Renamed the folder for the profile plugin to profile from profiles
# Improved performance of JArchiveZip by about 30% - Thanks Omar Ramos!
# Fixed type of the created_by field in the article edit screen - Thanks Omar Ramos!
# Fixed filter of type selector in plugin manager - Thanks Omar Ramos!
# Removed obsolete , in media/system/js/rules.js, fixes category saving issue in IE8 - Thanks Omar Ramos!


19-Jan-2010 Jean-Marie Simonet
^ Modified example content plugin xml. Added a language folder with a sample ini file
