@@ -5,6 +5,7 @@
 ; Note : All ini files need to be saved as UTF-8
 
 ALLOWS SEARCHING OF CATEGORIES INFORMATION="Enables searching of Category information"
+CATEGORIES="Categories"
 CATEGORY BLOG="Category Blog"
 CATEGORY LIST="Category List"
 NUMBER OF SEARCH ITEMS TO RETURN="Number of search items to return"
