@@ -5,6 +5,7 @@
 ; Note : All ini files need to be saved as UTF-8
 
 ALLOWS SEARCHING OF CONTACTS COMPONENT="Enables searching of the Contact Component"
+CONTACTS="Contacts"
 NUMBER OF SEARCH ITEMS TO RETURN="Number of search items to return"
 SEARCH LIMIT="Search Limit"
 
