@@ -1,9 +1,0 @@
-; $Id$
-; Joomla! Project
-; Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
-; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-; Note : All ini files need to be saved as UTF-8 - No BOM
-
-ALL PAGES="All Pages"
-ARTICLE INDEX="Article Index"
-PAGE #="Page %s"
