@@ -1,13 +1,0 @@
-# $Id: en-GB.plg_user_joomla.ini 11952 2009-06-01 03:21:19Z robs $
-# Joomla! Project
-# Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
-# License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-# Note : All ini files need to be saved as UTF-8 - No BOM
-
-PLG_CONTACTCREATOR_AUTOMATIC_CONTACT_DESC=Optionally automatically creates a linked contact for each new user
-PLG_CONTACTCREATOR_AUTOMATIC_CONTACT_LABEL=Automatic Contact Creation
-PLG_CONTACTCREATOR_AUTOPUBLISH_DESC=Optionally have the contact default to published or unpublished.
-PLG_CONTACTCREATOR_AUTOPUBLISH_LABEL=Autopublish the contact
-PLG_CONTACTCREATOR_CATEGORY_DESC=Category to assign contacts to by default
-PLG_CONTACTCREATOR_CATEGORY_LABEL=Category
-PLG_CONTACTCREATOR_NO_CATEGORY=Contact automatic creation failed because contact category is not set!
